Zephyr: disable Zephyr tests by default because these tests require a build zephyr_project directory which can not be guaranteed (some users do not executed init_zephyr.sh)

--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,8 +8,8 @@ option('enable_toplevel_tests', type: 'boolean', value: true,
     description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
 option('enable_gpslogger_tests', type: 'boolean', value: true)
 option('enable_librepilot_tests', type: 'boolean', value: true)
-option('enable_zephyr_tests', type: 'boolean', value: true,
-    description: 'All Zephyr tests are located in test/zephyr_test. The enable_step_tests option will be ignored for Zephyr tests.')
+option('enable_zephyr_tests', type: 'boolean', value: false,
+    description: 'All Zephyr tests are located in test/zephyr_test. The enable_step_tests option will be ignored for Zephyr tests. Only activate these tests if you have a zephyr_project directory in build dir. This directory will be generated via init_zephyr.sh script')
 
 option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
     description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
