FreeRTOS: set --os for synthesis to not use auto os detection (auto detection is not working because syscalls like e.g. strlen are used in POSIX)

--- a/settings/meson.build
+++ b/settings/meson.build
@@ -133,7 +133,7 @@ ara_gen_freertos_targets = ['passthrough',
 
 foreach target : ara_gen_freertos_targets
   set_variable('ara_gen_cmd_'+target, ara_gen_cmd +
-                             [ '--step-settings',
+                             [ '--os', 'FreeRTOS', '--step-settings',
                                files(join_paths(settings_dir, 'freertos_'+target+'.json')),
                              ]
               )
