Meson: add cfg_pic toplevel test
Execute it within the build directory.
```
meson test cfg_pic -v
```

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -16,6 +16,7 @@ freertos_targets = []
 ir_apps = [
   'abb_merge',
   'argument_load',
+  'cfg_pic',
   'condition',
   'critical_region_detection',
   'deadlock',
