POSIX: updated test cases for RemoveSysfuncBody step

--- a/test/posix_test/meson.build
+++ b/test/posix_test/meson.build
@@ -11,14 +11,25 @@ remove_sysfunc_body_data = meson.current_source_dir() / 'testdata/remove_sysfunc
 
 test('remove_sysfunc_body_auto',
     py3_inst,
-    args: [files('remove_sysfunc_body_auto_os.py'), files('remove_sysfunc_body.json'), remove_sysfunc_body_data],
+    args: [files('remove_sysfunc_body.py'), files('remove_sysfunc_body.json'), remove_sysfunc_body_data, 'False'],
     env: [python_path],
     suite: 'posix'
 )
-
 test('remove_sysfunc_body_posix',
     py3_inst,
-    args: [files('remove_sysfunc_body_posix_os.py'), files('remove_sysfunc_body.json'), remove_sysfunc_body_data],
+    args: [files('remove_sysfunc_body.py'), files('remove_sysfunc_body.json'), remove_sysfunc_body_data, 'False', 'POSIX'],
+    env: [python_path],
+    suite: 'posix'
+)
+test('remove_sysfunc_body_auto_drop',
+    py3_inst,
+    args: [files('remove_sysfunc_body.py'), files('remove_sysfunc_body_drop_llvm.json'), remove_sysfunc_body_data, 'True'],
+    env: [python_path],
+    suite: 'posix'
+)
+test('remove_sysfunc_body_posix_drop',
+    py3_inst,
+    args: [files('remove_sysfunc_body.py'), files('remove_sysfunc_body_drop_llvm.json'), remove_sysfunc_body_data, 'True', 'POSIX'],
     env: [python_path],
     suite: 'posix'
 )
