--- a/meson_options.txt
+++ b/meson_options.txt
@@ -10,6 +10,8 @@ option('enable_posix_toplevel_tests', type: 'boolean', value: false,
     description: 'Allowed the execution of time intensive posix toplevel tests [toplevel tests are a way to store common commandlines (Not actual tests)]')
 option('enable_gpslogger_tests', type: 'boolean', value: true)
 option('enable_librepilot_tests', type: 'boolean', value: true)
+option('enable_appl_graph_tests', type: 'boolean', value: true,
+    description: 'instance graph tests for common applications.')
 option('enable_zephyr_tests', type: 'boolean', value: false,
     description: 'All Zephyr tests are located in test/zephyr_test. The enable_step_tests option will be ignored for Zephyr tests. Only activate these tests if you have a zephyr_project directory in build dir. This directory will be generated via init_zephyr.sh script')
 option('enable_posix_tests', type: 'boolean', value: true,
