--- a/test/meson.build
+++ b/test/meson.build
@@ -148,6 +148,10 @@ if get_option('enable_step_tests')
     subdir('native_step_test')
 endif
 
+if get_option('enable_appl_graph_tests')
+    subdir('appl_graph_test')
+endif
+
 if get_option('enable_zephyr_tests')
     subdir('zephyr_test')
 endif
