meson: add option to prevent ara execution during the build process

--- a/appl/FreeRTOS/GPSLogger/meson.build
+++ b/appl/FreeRTOS/GPSLogger/meson.build
@@ -124,16 +124,20 @@ elf_targets = []
 profiles_list = []
 foreach target : ara_gen_freertos_targets
   name_prefix = 'gpslogger-' + target
-  ara_target = custom_target(name_prefix + '-os',
-                             input: gpslogger_application,
-                             depfile: name_prefix+ '-os.cc.dep',
-                             output: [name_prefix + '-os.cc',
-                                      name_prefix + '-os.cc.startup.s',
-                                      name_prefix + '-modifiedapp.ll',
-                                      name_prefix + '-os.cc.freertos_overrides.h',
-                                     ],
-                             command: get_variable('ara_gen_cmd_' + target)
-                            )
+  if get_option('execute_ara')
+    ara_target = custom_target(name_prefix + '-os',
+                               input: gpslogger_application,
+                               depfile: name_prefix+ '-os.cc.dep',
+                               output: [name_prefix + '-os.cc',
+                                        name_prefix + '-os.cc.startup.s',
+                                        name_prefix + '-modifiedapp.ll',
+                                        name_prefix + '-os.cc.freertos_overrides.h',
+                                       ],
+                               command: get_variable('ara_gen_cmd_' + target)
+                              )
+  else
+    ara_target = disabler()
+  endif
   os_target = [ara_target[0], ara_target[1]]
   app_aramodified_ll = ara_target[2]
   freertos_overrides = ara_target[3]
@@ -215,18 +219,20 @@ foreach target : ara_gen_freertos_targets
     named_elf_targets += [target + '-' + lto_version, lto_elf]
     profiles_list += ['--profiles', target + '-' + lto_version]
 
-    test('validate_generator_' + lto_prefix,
-         py3_inst,
-         args: [validate_generator_runner,
-                'gpslogger',
-                target,
-                ara_target,
-                os_target[0].full_path(),
-                lto_elf,
-               ],
-         workdir:  meson.current_source_dir(),
-         suite: 'generator'
-        )
+    if get_option('enable_gpslogger_tests')
+      test('validate_generator_' + lto_prefix,
+           py3_inst,
+           args: [validate_generator_runner,
+                  'gpslogger',
+                  target,
+                  ara_target,
+                  os_target[0].full_path(),
+                  lto_elf,
+                 ],
+           workdir:  meson.current_source_dir(),
+           suite: 'generator'
+          )
+    endif
 
     if get_option('enable_gpslogger_tests')
       test('run_qemu_' + name_prefix,
