--- a/meson_options.txt
+++ b/meson_options.txt
@@ -8,6 +8,11 @@ option('enable_toplevel_tests', type: 'boolean', value: true,
     description: 'Not actual tests, but stored common commandlines and examples for calling ARA.')
 option('enable_gpslogger_tests', type: 'boolean', value: true)
 option('enable_librepilot_tests', type: 'boolean', value: true)
+option('enable_generator_tests', type: 'boolean', value: true,
+    description: 'Test for the generator part of ARA (execute ARA and test the output')
+
+option('execute_ara', type: 'boolean', value: true,
+    description: 'Build targets which executes ARA')
 
 option('arm_include_dirs', type: 'array', value: ['/usr/lib/arm-none-eabi/include'],
     description: 'A list of include dirs for compiling for ARM. Only relevant, if arch==arm.')
