tests: add ina-i4copter

--- a/meson.build
+++ b/meson.build
@@ -190,4 +190,14 @@ if get_option('enable_toplevel_tests')
       timeout: 30
     )
 
+    test('ina-i4copter',
+      py3_inst,
+      args: [ara_py, autosar_singlecore_complex_isorc['ll'],
+             '--oilfile', autosar_singlecore_complex_isorc['oil'],
+             '--log-level', 'info',
+             '--step-settings', files(settings / 'ina_i4copter.json')],
+      suite: 'toplevel',
+      timeout: 30
+    )
+
 endif
