tests: rename librepilot_instance_graph -> ina-librepilot

--- a/meson.build
+++ b/meson.build
@@ -200,19 +200,6 @@ if get_option('enable_toplevel_tests')
       timeout: 30
     )
 
-    librepilot_instance_graph_settings = files(settings / 'librepilot_instance_graph.json')
-    librepilot_manual_corrections = files('appl' / 'FreeRTOS' / 'Librepilot' / 'instance_corrections.json')
-    test('librepilot_instance_graph',
-       py3_inst,
-       args: [ara_py, librepilot_application,
-              '--os', 'FreeRTOS',
-              '-v',
-              '--step-settings', librepilot_instance_graph_settings,
-              '--manual-corrections', librepilot_manual_corrections],
-       suite: 'toplevel',
-       timeout: 14400
-    )
-
     # OSPERT tests
     posix_settings = files('settings' / 'posix_instance_graph.json')
     test('posix_ospert',
@@ -256,4 +243,18 @@ if get_option('enable_toplevel_tests')
       suite: 'toplevel',
       timeout: 30
     )
+
+    librepilot_instance_graph_settings = files(settings / 'ina_librepilot.json')
+    librepilot_manual_corrections = files('appl' / 'FreeRTOS' / 'Librepilot' / 'instance_corrections.json')
+    test('ina-librepilot',
+       py3_inst,
+       args: [ara_py, librepilot_application,
+              '--os', 'FreeRTOS',
+              '--log-level', 'info',
+              '--step-settings', librepilot_instance_graph_settings,
+              '--manual-corrections', librepilot_manual_corrections],
+       suite: 'toplevel',
+       timeout: 0
+    )
+
 endif
