InstanceGraphExperiment: run target for POSIX libmicrohttpd modified

--- a/appl/meson.build
+++ b/appl/meson.build
@@ -361,4 +361,12 @@ run_target('zephyr_sys_kernel_instance_exp',
     depends: ara_py
 )
 
+run_target('libmicrohttpd_mod_instance_exp',
+    command: [py3_inst, InstanceGraphExperiment, '--title=ARA_Instance_Graph_Experiment', '-v',
+              '--llvm_ir=../appl/POSIX/microhttpd_fileserver_dirs.ll', '--os=POSIX',
+              '--custom_step_settings=../../appl/libmicrohttpd_experiment_settings.json'],
+    env: [python_path],
+    depends: ara_py
+)
+
 subdir('POSIX')
