POSIX: build and versuchung experiment support for original version of libmicrohttpd. Currently running the original version triggers an assert. Revert this commit if original version is not required.

--- a/appl/POSIX/Makefile
+++ b/appl/POSIX/Makefile
@@ -259,6 +259,9 @@ include $(MAKE_INCLUDE_DIR)/simple_project.mk
 #include $(MAKE_INCLUDE_DIR)/microhttpd_demo.mk
 include $(MAKE_INCLUDE_DIR)/microhttpd_fileserver_dirs.mk
 include $(MAKE_INCLUDE_DIR)/libmicrohttpd.mk
+# unmodified version:
+include $(MAKE_INCLUDE_DIR)/microhttpd_fileserver_dirs_orig.mk
+include $(MAKE_INCLUDE_DIR)/libmicrohttpd_orig.mk
 
 # C++ Test
 #include $(MAKE_INCLUDE_DIR)/llvm_libcxx.mk
