InstanceGraphExperiment: update settings to also run CallGraphStats

--- a/appl/librepilot_experiment_settings.json
+++ b/appl/librepilot_experiment_settings.json
@@ -1,17 +1,20 @@
 {
     "steps": [
+        "InteractionAnalysis",
         "CFGStats",
+        "CallGraphStats",
         "InstanceGraphStats"
     ],
 
     "InteractionAnalysis": {
         "dump": true
     },
-
     "CFGStats": {
         "dump": true
     },
-    
+    "CallGraphStats": {
+        "dump": true
+    },
     "InstanceGraphStats": {
         "dump": true
     },
